app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will
 * include all the files listed below.
 *
 * Any CSS and SCSS file within:
 * - this directory,
 * - lib/assets/stylesheets,
 * - vendor/assets/stylesheets, or
 * - any plugin's vendor/assets/stylesheets directory
 * can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at
 * the bottom of the compiled file so the styles you add here take precedence
 * over styles defined in any styles defined in the other CSS/SCSS files in this
 * directory. It is generally better to create a new file per style scope.
 */

@import "posts";
@import "users";
@import "comments";
@import "courses";
@import "objectives";
@import "pages";
@import "bootstrap-sprockets";
@import "bootstrap";

.clear { clear: both; }

.timestamp-latest { font-weight: bold; }
.timestamp-original {}

